--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?><!-- You may freely edit this file. See commented blocks below for --><!-- some examples of how to customize the build. --><!-- (If you delete it and reopen the project it will be recreated.) --><!-- By default, only the Clean and Build commands use this build script. --><project name="IPSX-Desktop-Client" default="default" basedir="." xmlns:fx="javafx:com.sun.javafx.tools.ant">
     <description>Builds, tests, and runs the project IPSX-Desktop-Client.</description>
     <import file="nbproject/build-impl.xml"/>
+
+    <!-- Copy java JRE and windows launcher -->
+    <target name="-post-compile">        
+        <copy file="extra\installer\launcher\ipsx-desktop-client.ico" todir="${dist.dir}" overwrite="true" />   
+        <copy file="extra\installer\launcher\ipsx-desktop-client.exe" todir="${dist.dir}" overwrite="true" />      
+        <unzip src="extra\jre\jre-1.8.zip" dest="${dist.dir}"/>        
+    </target>
+    
+    <!-- Delete unused JavaFX web app -->
+    <target name="-post-jfx-deploy">
+        <delete file="${dist.dir}\IPSX-Desktop-Client.html"/>
+        <delete file="${dist.dir}\IPSX-Desktop-Client.jnlp"/>
+        <delete dir="${dist.dir}\web-files" />
+    </target>
+
     <!--
 
     There exist several targets which are by default empty and which can be 
@@ -50,4 +65,6 @@
     nbproject/build-impl.xml and nbproject/jfx-impl.xml.
 
     -->
+
+
 </project>
