--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,15 +30,19 @@ dist.jar=${dist.dir}/IPSX-Desktop-Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6.jar
 file.reference.fontawesomefx-commons-8.15.jar=lib\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-materialicons-2.2.0-5.jar=lib\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-materialicons-2.2.0-5.jar
 file.reference.jfoenix-8.0.1.jar=lib/jfoenix/jfoenix-8.0.1.jar
+file.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=true
 javac.classpath=\
     ${javafx.classpath.extension}:\
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.jPowerShell-2.0.jar}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
     ${file.reference.fontawesomefx-materialicons-2.2.0-5.jar}
@@ -62,6 +66,8 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6-javadoc.jar
+javadoc.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -126,5 +132,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6-sources.jar
+source.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-sources.jar
 src.dir=src
 test.src.dir=test
