--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,9 +30,10 @@ dist.jar=${dist.dir}/IPSX-Desktop-Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.commons-exec-1.3.jar=lib/commons-exec/commons-exec-1.3.jar
 file.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6.jar
-file.reference.fontawesomefx-commons-8.15.jar=lib\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-commons-8.15.jar
-file.reference.fontawesomefx-materialicons-2.2.0-5.jar=lib\\fontawesomefx-glyphsbrowser-1.3.0\\lib\\fontawesomefx-materialicons-2.2.0-5.jar
+file.reference.fontawesomefx-commons-8.15.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-commons-8.15.jar
+file.reference.fontawesomefx-materialicons-2.2.0-5.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-materialicons-2.2.0-5.jar
 file.reference.jfoenix-8.0.1.jar=lib/jfoenix/jfoenix-8.0.1.jar
 file.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0.jar
 includes=**
@@ -42,6 +43,7 @@ jar.compress=true
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.commons-exec-1.3.jar}:\
     ${file.reference.jPowerShell-2.0.jar}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
@@ -66,6 +68,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=false
+javadoc.reference.commons-exec-1.3.jar=lib/commons-exec/commons-exec-1.3-javadoc.jar
 javadoc.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6-javadoc.jar
 javadoc.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-javadoc.jar
 javadoc.splitindex=true
@@ -132,6 +135,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.commons-exec-1.3.jar=lib/commons-exec/commons-exec-1.3-sources.jar
 source.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6-sources.jar
 source.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-sources.jar
 src.dir=src
