--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,6 +3,8 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=IPSX Desktop Client App
+application.homepage=https://ip.sx/
 application.title=IPSX-Desktop-Client
 application.vendor=IPSX
 auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
@@ -127,6 +129,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=false
 platform.active=default_platform
+project.license=apache20
+project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
