GetInternetProxy mac implementation
- First implementation without testing

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,6 +38,7 @@ file.reference.fontawesomefx-commons-8.15.jar=lib/fontawesomefx-glyphsbrowser/li
 file.reference.fontawesomefx-materialicons-2.2.0-5.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-materialicons-2.2.0-5.jar
 file.reference.jfoenix-8.0.1.jar=lib/jfoenix/jfoenix-8.0.1.jar
 file.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0.jar
+file.reference.json-simple-1.1.1.jar=lib/json-simple/json-simple-1.1.1.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.jPowerShell-2.0.jar}:\
     ${file.reference.jfoenix-8.0.1.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
-    ${file.reference.fontawesomefx-materialicons-2.2.0-5.jar}
+    ${file.reference.fontawesomefx-materialicons-2.2.0-5.jar}:\
+    ${file.reference.json-simple-1.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
