updating system tray info and classpath

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,9 +36,14 @@ file.reference.commons-exec-1.3.jar=lib/commons-exec/commons-exec-1.3.jar
 file.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6.jar
 file.reference.fontawesomefx-commons-8.15.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-materialicons-2.2.0-5.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-materialicons-2.2.0-5.jar
+file.reference.javassist-3.22.0-GA.jar=lib/dorkbox/javassist-3.22.0-GA/javassist-3.22.0-GA.jar
 file.reference.jfoenix-8.0.1.jar=lib/jfoenix/jfoenix-8.0.1.jar
+file.reference.jna-4.5.1.jar=lib/dorkbox/jna-4.5.1/jna-4.5.1.jar
+file.reference.jna-platform-4.5.1.jar=lib/dorkbox/jna-platform-4.5.1/jna-platform-4.5.1.jar
 file.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0.jar
 file.reference.json-simple-1.1.1.jar=lib/json-simple/json-simple-1.1.1.jar
+file.reference.slf4j-api-1.7.25.jar=lib/dorkbox/slf4j-api-1.7.25/slf4j-api-1.7.25.jar
+file.reference.SystemTray-3.14.jar=lib/dorkbox/SystemTray-3.14/SystemTray-3.14.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -51,7 +56,12 @@ javac.classpath=\
     ${file.reference.jfoenix-8.0.1.jar}:\
     ${file.reference.fontawesomefx-commons-8.15.jar}:\
     ${file.reference.fontawesomefx-materialicons-2.2.0-5.jar}:\
-    ${file.reference.json-simple-1.1.1.jar}
+    ${file.reference.json-simple-1.1.1.jar}:\
+    ${file.reference.javassist-3.22.0-GA.jar}:\
+    ${file.reference.jna-4.5.1.jar}:\
+    ${file.reference.jna-platform-4.5.1.jar}:\
+    ${file.reference.slf4j-api-1.7.25.jar}:\
+    ${file.reference.SystemTray-3.14.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -74,7 +84,11 @@ javadoc.notree=false
 javadoc.private=false
 javadoc.reference.commons-exec-1.3.jar=lib/commons-exec/commons-exec-1.3-javadoc.jar
 javadoc.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6-javadoc.jar
+javadoc.reference.javassist-3.22.0-GA.jar=lib/dorkbox/javassist-3.22.0-GA/javassist-3.22.0-GA-javadoc.jar
+javadoc.reference.jna-4.5.1.jar=lib/dorkbox/jna-4.5.1/jna-4.5.1-javadoc.jar
+javadoc.reference.jna-platform-4.5.1.jar=lib/dorkbox/jna-platform-4.5.1/jna-platform-4.5.1-javadoc.jar
 javadoc.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-javadoc.jar
+javadoc.reference.slf4j-api-1.7.25.jar=lib/dorkbox/slf4j-api-1.7.25/slf4j-api-1.7.25-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -143,6 +157,10 @@ run.test.classpath=\
 source.encoding=UTF-8
 source.reference.commons-exec-1.3.jar=lib/commons-exec/commons-exec-1.3-sources.jar
 source.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6-sources.jar
+source.reference.javassist-3.22.0-GA.jar=lib/dorkbox/javassist-3.22.0-GA/javassist-3.22.0-GA-sources.jar
+source.reference.jna-4.5.1.jar=lib/dorkbox/jna-4.5.1/jna-4.5.1-sources.jar
+source.reference.jna-platform-4.5.1.jar=lib/dorkbox/jna-platform-4.5.1/jna-platform-4.5.1-sources.jar
 source.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-sources.jar
+source.reference.slf4j-api-1.7.25.jar=lib/dorkbox/slf4j-api-1.7.25/slf4j-api-1.7.25-sources.jar
 src.dir=src
 test.src.dir=test
