Implementing LOG system

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,9 @@ file.reference.jna-4.5.1.jar=lib/dorkbox/jna-4.5.1/jna-4.5.1.jar
 file.reference.jna-platform-4.5.1.jar=lib/dorkbox/jna-platform-4.5.1/jna-platform-4.5.1.jar
 file.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0.jar
 file.reference.json-simple-1.1.1.jar=lib/json-simple/json-simple-1.1.1.jar
+file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17/log4j-1.2.17.jar
 file.reference.slf4j-api-1.7.25.jar=lib/dorkbox/slf4j-api-1.7.25/slf4j-api-1.7.25.jar
+file.reference.slf4j-log4j12-1.7.25.jar=lib/slf4j-log4j12-1.7.25/slf4j-log4j12-1.7.25.jar
 file.reference.SystemTray-3.14.jar=lib/dorkbox/SystemTray-3.14/SystemTray-3.14.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
@@ -61,7 +63,9 @@ javac.classpath=\
     ${file.reference.jna-4.5.1.jar}:\
     ${file.reference.jna-platform-4.5.1.jar}:\
     ${file.reference.slf4j-api-1.7.25.jar}:\
-    ${file.reference.SystemTray-3.14.jar}
+    ${file.reference.SystemTray-3.14.jar}:\
+    ${file.reference.slf4j-log4j12-1.7.25.jar}:\
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -88,7 +92,9 @@ javadoc.reference.javassist-3.22.0-GA.jar=lib/dorkbox/javassist-3.22.0-GA/javass
 javadoc.reference.jna-4.5.1.jar=lib/dorkbox/jna-4.5.1/jna-4.5.1-javadoc.jar
 javadoc.reference.jna-platform-4.5.1.jar=lib/dorkbox/jna-platform-4.5.1/jna-platform-4.5.1-javadoc.jar
 javadoc.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-javadoc.jar
+javadoc.reference.log4j-1.2.17.jar=lib/log4j-1.2.17/log4j-1.2.17-javadoc.jar
 javadoc.reference.slf4j-api-1.7.25.jar=lib/dorkbox/slf4j-api-1.7.25/slf4j-api-1.7.25-javadoc.jar
+javadoc.reference.slf4j-log4j12-1.7.25.jar=lib/slf4j-log4j12-1.7.25/slf4j-log4j12-1.7.25-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -161,6 +167,8 @@ source.reference.javassist-3.22.0-GA.jar=lib/dorkbox/javassist-3.22.0-GA/javassi
 source.reference.jna-4.5.1.jar=lib/dorkbox/jna-4.5.1/jna-4.5.1-sources.jar
 source.reference.jna-platform-4.5.1.jar=lib/dorkbox/jna-platform-4.5.1/jna-platform-4.5.1-sources.jar
 source.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-sources.jar
+source.reference.log4j-1.2.17.jar=lib/log4j-1.2.17/log4j-1.2.17-sources.jar
 source.reference.slf4j-api-1.7.25.jar=lib/dorkbox/slf4j-api-1.7.25/slf4j-api-1.7.25-sources.jar
+source.reference.slf4j-log4j12-1.7.25.jar=lib/slf4j-log4j12-1.7.25/slf4j-log4j12-1.7.25-sources.jar
 src.dir=src
 test.src.dir=test
