--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -170,5 +170,6 @@ source.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0-sources.jar
 source.reference.log4j-1.2.17.jar=lib/log4j-1.2.17/log4j-1.2.17-sources.jar
 source.reference.slf4j-api-1.7.25.jar=lib/dorkbox/slf4j-api-1.7.25/slf4j-api-1.7.25-sources.jar
 source.reference.slf4j-log4j12-1.7.25.jar=lib/slf4j-log4j12-1.7.25/slf4j-log4j12-1.7.25-sources.jar
+source.reference.SystemTray-3.14.jar=lib/dorkbox/SystemTray-3.14/SystemTray-3.14-sources.jar
 src.dir=src
 test.src.dir=test
