--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -160,6 +160,7 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.jvmargs=-Djava.awt.headless=true -Dapple.awt.UIElement=true
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
