--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -112,8 +112,8 @@ javafx.deploy.allowoffline=true
 javafx.deploy.backgroundupdate=false
 javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
-javafx.deploy.icon=src/sx/ip/imgs/icon.png
-javafx.deploy.icon.native=src/sx/ip/imgs/icon.png
+javafx.deploy.icon=extra/image-sources/favicon.png.icns
+javafx.deploy.icon.native=extra/image-sources/favicon.png.icns
 javafx.deploy.includeDT=true
 javafx.deploy.installpermanently=true
 javafx.deploy.permissionselevated=false
