App icons for mac

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -112,8 +112,8 @@ javafx.deploy.allowoffline=true
 javafx.deploy.backgroundupdate=false
 javafx.deploy.disable.proxy=false
 javafx.deploy.embedJNLP=true
-javafx.deploy.icon=extra/image-sources/favicon.png.icns
-javafx.deploy.icon.native=extra/image-sources/favicon.png.icns
+javafx.deploy.icon=extra/image-sources/IPSX_icon.png.hqx
+javafx.deploy.icon.native=extra/image-sources/IPSX_icon.png.hqx
 javafx.deploy.includeDT=true
 javafx.deploy.installpermanently=true
 javafx.deploy.permissionselevated=false
@@ -160,7 +160,6 @@ run.classpath=\
     ${dist.jar}:\
     ${javac.classpath}:\
     ${build.classes.dir}
-run.jvmargs=-Djava.awt.headless=true -Dapple.awt.UIElement=true
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
