--- a/.gitignore
+++ b/.gitignore
@@ -19,4 +19,25 @@ logs/*
 !logs/.gitkeep
 
 # Ignore some updated netbeans config backups
+nbproject/UPDATED.TXT
 nbproject/jfx-impl_*
+nbproject/jfx-impl_backup_1.xml
+nbproject/jfx-impl_backup_2.xml
+nbproject/jfx-impl_backup_3.xml
+nbproject/jfx-impl_backup_4.xml
+nbproject/jfx-impl_backup_5.xml
+nbproject/jfx-impl_backup_6.xml
+nbproject/jfx-impl_backup_7.xml
+nbproject/jfx-impl_backup_8.xml
+nbproject/jfx-impl_backup_9.xml
+nbproject/jfx-impl_backup_10.xml
+nbproject/jfx-impl_backup_11.xml
+nbproject/jfx-impl_backup_12.xml
+nbproject/jfx-impl_backup_13.xml
+nbproject/jfx-impl_backup_14.xml
+nbproject/jfx-impl_backup_15.xml
+nbproject/jfx-impl_backup_16.xml
+nbproject/jfx-impl_backup_17.xml
+nbproject/jfx-impl_backup_18.xml
+nbproject/jfx-impl_backup_19.xml
+nbproject/jfx-impl_backup_20.xml
