Linux installer on ant task

--- a/build.xml
+++ b/build.xml
@@ -3,20 +3,33 @@
     <import file="nbproject/build-impl.xml"/>
 
     <!-- Copy java JRE and windows launcher -->
-    <target name="-post-compile">        
+    <target name="-post-clean">        
         <copy file="extra\installer\launcher\ipsx-desktop-client.ico" todir="${dist.dir}" overwrite="true" />   
         <copy file="extra\installer\launcher\ipsx-desktop-client.exe" todir="${dist.dir}" overwrite="true" />  
         <copy file="extra\linux\ipsx-desktop-client.sh" todir="${dist.dir}" overwrite="true" />  
         <copy file="log4j.properties" todir="${dist.dir}" overwrite="true" />
         <copy file="logs\.gitkeep" todir="${dist.dir}\logs\" overwrite="true"/>
-        <unzip src="extra\jre\jre-1.8.zip" dest="${dist.dir}"/>   
     </target>
-    
+
     <!-- Delete unused JavaFX web app -->
     <target name="-post-jfx-deploy">
+        
         <delete file="${dist.dir}\IPSX-Desktop-Client.html"/>
         <delete file="${dist.dir}\IPSX-Desktop-Client.jnlp"/>
         <delete dir="${dist.dir}\web-files" />
+         
+        <!-- Generate the linux version -->
+        <zip basedir="${dist.dir}/" destfile="${dist.dir}/../versions/ipsx-desktop-client-setup-latest.zip" compress="true" 
+             comment=" IPSX Desktop Client${line.separator} ${line.separator}
+In order to execute the application try to execute the jar file using the following command:${line.separator}
+java -jar IPSX-Desktop-Client.jar${line.separator}
+${line.separator}
+Or try to use the commands below if you are on Linux:${line.separator}
+chmod +x ipsx-desktop-client.sh${line.separator}
+./ipsx-desktop-client.sh"/>
+
+        <!-- Make sure this one is after the linux version -->
+        <unzip src="extra\jre\jre-1.8.zip" dest="${dist.dir}" />        
     </target>
 
     <!--
