--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,7 +51,6 @@ includes=**
 jar.archive.disabled=true
 jar.compress=true
 javac.classpath=\
-    ${javafx.classpath.extension}:\
     ${file.reference.commons-io-2.6.jar}:\
     ${file.reference.commons-exec-1.3.jar}:\
     ${file.reference.jPowerShell-2.0.jar}:\
@@ -65,7 +64,8 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.25.jar}:\
     ${file.reference.SystemTray-3.14.jar}:\
     ${file.reference.slf4j-log4j12-1.7.25.jar}:\
-    ${file.reference.log4j-1.2.17.jar}
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -102,9 +102,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
+    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=true
 javafx.deploy.addstartmenushortcut=true
 javafx.deploy.allowoffline=true
@@ -153,7 +153,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=true
-platform.active=default_platform
+platform.active=JDK_1.8
 project.license=apache20
 project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
