--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -64,8 +64,7 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.7.25.jar}:\
     ${file.reference.SystemTray-3.14.jar}:\
     ${file.reference.slf4j-log4j12-1.7.25.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${javafx.classpath.extension}
+    ${file.reference.log4j-1.2.17.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -101,10 +100,6 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
-javafx.classpath.extension=\
-    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=true
 javafx.deploy.addstartmenushortcut=true
 javafx.deploy.allowoffline=true
