--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,18 +34,26 @@ endorsed.classpath=
 excludes=
 file.reference.commons-exec-1.3.jar=lib/commons-exec/commons-exec-1.3.jar
 file.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6.jar
+file.reference.commons-logging-1.2.jar=lib/unirest/commons-logging-1.2.jar
 file.reference.fontawesomefx-commons-8.15.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-materialicons-2.2.0-5.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-materialicons-2.2.0-5.jar
+file.reference.httpasyncclient-4.0.2.jar=lib/unirest/httpasyncclient-4.0.2.jar
+file.reference.httpclient-4.3.6.jar=lib/unirest/httpclient-4.3.6.jar
+file.reference.httpcore-4.3.3.jar=lib/unirest/httpcore-4.3.3.jar
+file.reference.httpcore-nio-4.3.3.jar=lib/unirest/httpcore-nio-4.3.3.jar
+file.reference.httpmime-4.3.6.jar=lib/unirest/httpmime-4.3.6.jar
 file.reference.javassist-3.22.0-GA.jar=lib/dorkbox/javassist-3.22.0-GA/javassist-3.22.0-GA.jar
 file.reference.jfoenix-8.0.1.jar=lib/jfoenix/jfoenix-8.0.1.jar
 file.reference.jna-4.5.1.jar=lib/dorkbox/jna-4.5.1/jna-4.5.1.jar
 file.reference.jna-platform-4.5.1.jar=lib/dorkbox/jna-platform-4.5.1/jna-platform-4.5.1.jar
 file.reference.jPowerShell-2.0.jar=lib/jpowershell/jPowerShell-2.0.jar
+file.reference.json-20140107.jar=lib/unirest/json-20140107.jar
 file.reference.json-simple-1.1.1.jar=lib/json-simple/json-simple-1.1.1.jar
 file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17/log4j-1.2.17.jar
 file.reference.slf4j-api-1.7.25.jar=lib/dorkbox/slf4j-api-1.7.25/slf4j-api-1.7.25.jar
 file.reference.slf4j-log4j12-1.7.25.jar=lib/slf4j-log4j12-1.7.25/slf4j-log4j12-1.7.25.jar
 file.reference.SystemTray-3.14.jar=lib/dorkbox/SystemTray-3.14/SystemTray-3.14.jar
+file.reference.unirest-java-1.4.9.jar=lib/unirest/unirest-java-1.4.9.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -65,7 +73,15 @@ javac.classpath=\
     ${file.reference.SystemTray-3.14.jar}:\
     ${file.reference.slf4j-log4j12-1.7.25.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.httpasyncclient-4.0.2.jar}:\
+    ${file.reference.httpclient-4.3.6.jar}:\
+    ${file.reference.httpcore-4.3.3.jar}:\
+    ${file.reference.httpcore-nio-4.3.3.jar}:\
+    ${file.reference.httpmime-4.3.6.jar}:\
+    ${file.reference.json-20140107.jar}:\
+    ${file.reference.unirest-java-1.4.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
