--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -73,7 +73,6 @@ javac.classpath=\
     ${file.reference.SystemTray-3.14.jar}:\
     ${file.reference.slf4j-log4j12-1.7.25.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
-    ${javafx.classpath.extension}:\
     ${file.reference.commons-logging-1.2.jar}:\
     ${file.reference.httpasyncclient-4.0.2.jar}:\
     ${file.reference.httpclient-4.3.6.jar}:\
@@ -81,7 +80,8 @@ javac.classpath=\
     ${file.reference.httpcore-nio-4.3.3.jar}:\
     ${file.reference.httpmime-4.3.6.jar}:\
     ${file.reference.json-20140107.jar}:\
-    ${file.reference.unirest-java-1.4.9.jar}
+    ${file.reference.unirest-java-1.4.9.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -118,9 +118,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${java.home}/lib/javaws.jar:\
-    ${java.home}/lib/deploy.jar:\
-    ${java.home}/lib/plugin.jar
+    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
+    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=true
 javafx.deploy.addstartmenushortcut=true
 javafx.deploy.allowoffline=true
@@ -169,7 +169,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=true
-platform.active=default_platform
+platform.active=JDK_1.8
 project.license=apache20
 project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
