--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -100,7 +100,8 @@ javac.classpath=\
     ${file.reference.okhttp-2.7.5.jar}:\
     ${file.reference.okio-1.6.0.jar}:\
     ${file.reference.swagger-annotations-1.5.15.jar}:\
-    ${file.reference.threetenbp-1.3.5.jar}
+    ${file.reference.threetenbp-1.3.5.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
