--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ dist.jar=${dist.dir}/IPSX-Desktop-Client.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.bcprov-jdk15on-160.jar=lib/Security/bcprov-jdk15on-160.jar
 file.reference.commons-exec-1.3.jar=lib/commons-exec/commons-exec-1.3.jar
 file.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6.jar
 file.reference.commons-logging-1.2.jar=lib/unirest/commons-logging-1.2.jar
@@ -101,7 +102,8 @@ javac.classpath=\
     ${file.reference.okio-1.6.0.jar}:\
     ${file.reference.swagger-annotations-1.5.15.jar}:\
     ${file.reference.threetenbp-1.3.5.jar}:\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.bcprov-jdk15on-160.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
