Revert "Merge branch 'development' into task/IDC-140"
This reverts commit 9a661290d32f8767177019665b1bda8b683e73ea.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,7 +38,6 @@ file.reference.commons-io-2.6.jar=lib/commons-io/commons-io-2.6.jar
 file.reference.commons-logging-1.2.jar=lib/unirest/commons-logging-1.2.jar
 file.reference.fontawesomefx-commons-8.15.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-commons-8.15.jar
 file.reference.fontawesomefx-materialicons-2.2.0-5.jar=lib/fontawesomefx-glyphsbrowser/lib/fontawesomefx-materialicons-2.2.0-5.jar
-file.reference.gson-2.8.5.jar=lib/gson/gson-2.8.5.jar
 file.reference.httpasyncclient-4.0.2.jar=lib/unirest/httpasyncclient-4.0.2.jar
 file.reference.httpclient-4.3.6.jar=lib/unirest/httpclient-4.3.6.jar
 file.reference.httpcore-4.3.3.jar=lib/unirest/httpcore-4.3.3.jar
@@ -84,8 +83,7 @@ javac.classpath=\
     ${file.reference.json-20140107.jar}:\
     ${file.reference.unirest-java-1.4.9.jar}:\
     ${javafx.classpath.extension}:\
-    ${file.reference.bcprov-jdk15on-160.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.bcprov-jdk15on-160.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
