--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -83,9 +83,9 @@ javac.classpath=\
     ${file.reference.httpmime-4.3.6.jar}:\
     ${file.reference.json-20140107.jar}:\
     ${file.reference.unirest-java-1.4.9.jar}:\
-    ${javafx.classpath.extension}:\
     ${file.reference.bcprov-jdk15on-160.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${javafx.classpath.extension}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -122,9 +122,9 @@ javadoc.windowtitle=
 javafx.application.implementation.version=1.0
 javafx.binarycss=false
 javafx.classpath.extension=\
-    ${platforms.JDK_1.8.home}/jre/lib/javaws.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/deploy.jar:\
-    ${platforms.JDK_1.8.home}/jre/lib/plugin.jar
+    ${java.home}/lib/javaws.jar:\
+    ${java.home}/lib/deploy.jar:\
+    ${java.home}/lib/plugin.jar
 javafx.deploy.adddesktopshortcut=true
 javafx.deploy.addstartmenushortcut=true
 javafx.deploy.allowoffline=true
@@ -173,7 +173,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 native.bundling.enabled=true
-platform.active=JDK_1.8
+platform.active=default_platform
 project.license=apache20
 project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
